[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
image = "0.24.8"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
num = "0.4.1"
rayon = "1.8.1"
